Update tmux color and fixed window numbering

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,9 @@ set-option -g allow-rename off
 # window numbering start from 1
 set -g base-index 1
 
+# reorder after deleted one window
+set -g renumber-windows on
+
 # set update frequency (default 15 seconds)
 set -g status-interval 5
 
@@ -30,23 +33,25 @@ set -g pane-active-border-fg black
 
 # status line
 set -g status-bg default
-set -g status-fg colour82
+set -g status-fg colour3
 
-# show computer's name (right)
+# status line left side
 set -g status-left-length 40
-set -g status-left " ▶ #(hostname) ◀ "
+set -g status-left "  "
+# set -g status-left " ▶ #(hostname) ◀ "
 
-# show date (left)
+# status line right side
 set -g status-right-length 60
-set -g status-right " ▶ #(date | awk '{print $4}') ◀ "
+set -g status-right ""
+# set -g status-right " ▶ #(date | awk '{print $4}') ◀ "
 
 # darkblue for active and darkgray for inactive
-set-window-option -g window-status-current-fg colour12
+set-window-option -g window-status-current-fg colour2
 set-window-option -g window-status-fg colour239
 
 # message color
-set-option -g message-fg colour12
-set-option -g message-bg colour233
+set-option -g message-fg colour2
+set-option -g message-bg default
 
 # active border
-set-option -g pane-active-border-fg colour12
+set-option -g pane-active-border-fg colour2
