Add tmux plugin manager

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,12 @@ set -s escape-time 0
 bind \ split-window -h
 bind - split-window -v
 
+# panes navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # disable keys
 unbind '"'
 unbind %
@@ -33,25 +39,35 @@ set -g pane-active-border-fg black
 
 # status line
 set -g status-bg default
-set -g status-fg colour3
+set -g status-fg colour9
 
 # status line left side
 set -g status-left-length 40
 set -g status-left "  "
-# set -g status-left " ▶ #(hostname) ◀ "
 
 # status line right side
 set -g status-right-length 60
 set -g status-right ""
-# set -g status-right " ▶ #(date | awk '{print $4}') ◀ "
 
-# darkblue for active and darkgray for inactive
-set-window-option -g window-status-current-fg colour2
+# darkred for active and darkgray for inactive
+set-window-option -g window-status-current-fg colour9
 set-window-option -g window-status-fg colour239
 
 # message color
-set-option -g message-fg colour2
+set-option -g message-fg colour9
 set-option -g message-bg default
 
 # active border
-set-option -g pane-active-border-fg colour2
+set-option -g pane-active-border-fg colour9
+
+# Cursor shape neovim
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+
+# tpm
+set -g @plugin 'tmux-plugins/tpm'
+
+# plugin
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# run tpm
+run '~/.tmux/plugins/tpm/tpm'
