--- a/.config/i3/config
+++ b/.config/i3/config
@@ -144,8 +144,8 @@ mode "screen" {
 bindsym $mod+r mode "resize"
 
 # background
-# exec --no-startup-id feh --bg-scale /home/krisan/Pictures/dracula.png
-exec --no-startup-id xsetroot -solid "#3c4556"
+exec --no-startup-id compton -b ~/.config/compton/compton.conf
+exec --no-startup-id feh --bg-scale ~/Pictures/dracula.png
 
 # window title
 title_align center
