Fix compton desktop background issue
Due to i3 reordering window in stacked or tabbed layout

--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -1,1 +1,6 @@
-opacity-rule = ["100:class_g = 'Termite'"];
+# compton config file
+
+opacity-rule = [
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+  "100:class_g = 'Termite'"
+];
