--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -20,31 +20,42 @@ order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery all"
 order += "load"
+order += "volume master"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+        format_up = "📡 (%quality at %essid) %ip"
+        format_down = "📡 down"
 }
 
 ethernet _first_ {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_up = "🔌 %ip (%speed)"
+        format_down = "🔌 down"
 }
 
 battery all {
         format = "%status %percentage %remaining"
+        status_chr  = "⚡"
+        status_bat  = "🔋"
+        status_unk  = "👽"
+        status_full = "😊"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = "📅 %Y-%m-%d ⏰ %H:%M %Z"
 }
 
 load {
-        format = "%1min"
+        format = "💻 %1min"
 }
 
 disk "/" {
-        format = "%avail"
+        format = "💽 %avail"
 }
+
+ volume master {
+       format = "🔉 %volume"
+       format_muted = "🔇 %volume"
+       device = "pulse:0"
+ }
