--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,7 @@ unbind %
 set -g default-terminal "screen-256color"
 
 # disable renaming window automatically
-set-option -g allow-rename off
+set -g allow-rename off
 
 # window numbering start from 1
 set -g base-index 1
@@ -34,8 +34,8 @@ set -g status-interval 5
 set -g status-justify centre
 
 # pane border
-set -g pane-border-fg black
-set -g pane-active-border-fg black
+set -g pane-border-style fg=black
+set -g pane-active-border-style fg=black
 
 # status line
 set -g status-bg default
@@ -50,15 +50,14 @@ set -g status-right-length 60
 set -g status-right ""
 
 # darkred for active and darkgray for inactive
-set-window-option -g window-status-current-fg colour9
-set-window-option -g window-status-fg colour239
+set-window-option -g window-status-current-style fg=colour9
+set-window-option -g window-status-style fg=colour239
 
 # message color
-set-option -g message-fg colour9
-set-option -g message-bg default
+set -g message-style fg=colour9
 
 # active border
-set-option -g pane-active-border-fg colour9
+set -g pane-active-border-style fg=colour9
 
 # Cursor shape neovim
 set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
