--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -8,7 +8,7 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/mybar]
-;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:}
 width = 100%
 height = 18
 ;offset-x = 1%
@@ -114,6 +114,7 @@ type = internal/i3
 ws-icon-0 = 1;
 ws-icon-1 = 2;
 ws-icon-2 = 3;
+ws-icon-3 = 4;
 ws-icon-default = 
 
 format = <label-state> <label-mode>
@@ -142,7 +143,7 @@ label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
 label-visible-background = ${self.label-focused-background}
-label-visible-underline = ${self.label-focused-underline}
+label-visible-underline = ${xrdb:color2}
 label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
