--- a/.config/termite/config
+++ b/.config/termite/config
@@ -1,5 +1,5 @@
 [options]
-font = Meslo LG S DZ for Powerline 10
+font = Meslo LG S DZ for Powerline 9.5
 
 # Length of the scrollback buffer, 0 disabled the scrollback buffer
 # and setting it to a negative value means "infinite scrollback"
@@ -10,7 +10,7 @@ scrollback_lines = 10000
 # special
 foreground      = #f8f8f2
 foreground_bold = #f8f8f2
-cursor          = #f8f8f2
+cursor          = #93a1a1
 background = rgba(40, 42, 54, 0.95)
 
 # black
@@ -45,4 +45,4 @@ color14 = #9aedfe
 color7  = #bfbfbf
 color15 = #e6e6e6
 
-# vim: ft=dosini cms=#%s
+# vim: ft=dosini
