--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,7 @@ set -g pane-active-border-style fg=black
 
 # status line
 set -g status-bg default
-set -g status-fg colour9
+set -g status-fg colour4
 
 # status line left side
 set -g status-left-length 40
@@ -50,16 +50,16 @@ set -g status-right-length 60
 set -g status-right ""
 
 # darkred for active and darkgray for inactive
-set-window-option -g window-status-current-style fg=colour9
+set-window-option -g window-status-current-style fg=colour4
 set-window-option -g window-status-style fg=colour239
 
 # message color
-set -g message-style fg=colour9
+set -g message-style fg=colour4
 
 # active border
-set -g pane-active-border-style fg=colour9
+set -g pane-active-border-style fg=colour4
 
-# Cursor shape neovim
+# cursor shape neovim
 set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 # tpm
