Run tpm in background

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,4 +69,4 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # run tpm
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
