Change external monitor icon

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -114,7 +114,7 @@ type = internal/i3
 ws-icon-0 = 1;
 ws-icon-1 = 2;
 ws-icon-2 = 3;
-ws-icon-3 = 4;
+ws-icon-3 = 4;
 ws-icon-default = 
 
 format = <label-state> <label-mode>
@@ -155,7 +155,6 @@ label-urgent-padding = ${module/bspwm.label-urgent-padding}
 
 ; Separator in between workspaces
 ; label-separator = |
-
 
 [module/mpd]
 type = internal/mpd
