--- a/.config/i3/config
+++ b/.config/i3/config
@@ -18,8 +18,7 @@ bindsym $mod+Return exec --no-startup-id $term
 # kill focused window
 bindsym $mod+q kill
 
-# start dmenu (a program launcher)
-# bindsym $mod+d exec --no-startup-id dmenu_run -i -p "Search:" -nb '#282a36' -nf '#bd93f9' -sb '#bd93f9' -sf '#282a36' -fn 'Meslo LG S DZ for Powerline:pixelsize=15'
+# start rofi (a program launcher)
 bindsym $mod+d exec --no-startup-id rofi -show run
 
 # change focus
@@ -128,26 +127,14 @@ mode "resize" {
 }
 
 mode "screen" {
-        # # Projector
-        # # # primary monitor same as external monitor
-        # bindsym s exec --no-startup-id xrandr --output eDP1 --mode 800x600 --output DP1 --same-as eDP1 --mode 800x600
-        # # external monitor on the right side
-        # bindsym l exec --no-startup-id xrandr --output DP1 --mode 800x600 --right-of eDP1
-        # # external monitor on the left side
-        # bindsym h exec --no-startup-id xrandr --output DP1 --mode 800x600 --left-of eDP1
-        # # only display primary monitor
-        # bindsym r exec --no-startup-id xrandr --output DP1 --off --output eDP1 --auto
-
-        # # HDMI
         # primary monitor same as external monitor
-        # bindsym s exec --no-startup-id xrandr --output eDP1 --mode 800x600 --output HDMI1 --same-as eDP1 --mode 800x600
-        bindsym s exec --no-startup-id xrandr --output eDP1 --mode 1280x720 --output HDMI1 --same-as eDP1 --mode 1280x720
+        bindsym s exec --no-startup-id $HOME/.local/bin/external-monitor.sh -s
         # external monitor on the right side
-        bindsym l exec --no-startup-id xrandr --output HDMI1 --mode 1280x720 --right-of eDP1
+        bindsym l exec --no-startup-id $HOME/.local/bin/external-monitor.sh -l
         # external monitor on the left side
-        bindsym h exec --no-startup-id xrandr --output HDMI1 --mode 800x600 --left-of eDP1
+        bindsym h exec --no-startup-id $HOME/.local/bin/external-monitor.sh -h
         # only display primary monitor
-        bindsym r exec --no-startup-id xrandr --output HDMI1 --off --output eDP1 --auto
+        bindsym r exec --no-startup-id $HOME/.local/bin/external-monitor.sh -r
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
@@ -161,8 +148,7 @@ bindsym $mod+r mode "resize"
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # background
-# exec_always --no-startup-id compton --config ~/.config/compton/compton.conf
-exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper/flat-mountain.jpg
+exec --no-startup-id feh --bg-fill $HOME/Pictures/wallpaper/flat-mountain.jpg
 
 # window title
 title_align center
@@ -171,7 +157,6 @@ for_window [class=".*"] title_format "<b>%class</b>"
 # i3gaps
 gaps inner 10
 gaps outer 5
-# smart_gaps on
 
 default_border pixel 3
 default_floating_border pixel 3
@@ -192,32 +177,14 @@ set   $gray                 #bfbfbf
 
 # set some nice colors      border      background    text        indicator
 client.focused              $violet     $violet       $black      $green
-#client.unfocused           $gray       $black        $white
-#client.focused_inactive    $gray       $black        $white
-#client.urgent              $rd         $rd           $tx
-
-# bar {
-#         status_command i3blocks
-#         font pango:monospace 10
-#         font pango:Meslo LG S DZ for Powerline 9
-#         position top
-
-#         colors {
-#             background $darkviolet
-#             statusline $red
-#             separator $cyan
-
-#             focused_workspace              $green         $darkviolet       $green
-#             active_workspace               $gray          $black            $gray
-#             inactive_workspace             $darkviolet    $black            $darkviolet
-#             urgent_workspace               $cyan          $darkviolet       $cyan
-#         }
-# }
+client.unfocused            $darkviolet $darkviolet   $white
+client.focused_inactive     $darkviolet $darkviolet   $white
 
 for_window [class="URxvt"]          move workspace $ws1; workspace $ws1
 for_window [class="Termite"]        move workspace $ws1; workspace $ws1
 for_window [class="kitty"]          move workspace $ws1; workspace $ws1
-for_window [class="Firefox"]        move workspace $ws2; workspace $ws2
+for_window [class="Emacs"]          move workspace $ws1; workspace $ws1
+for_window [class="firefox"]        move workspace $ws2; workspace $ws2
 for_window [class="Google-chrome"]  move workspace $ws3; workspace $ws3
 for_window [title="Save Image"]     fullscreen
 
@@ -247,8 +214,8 @@ bindsym $mod+period           gaps inner current set 10; gaps outer current set 
 bindsym $mod+Tab              workspace back_and_forth
 bindsym Print                 exec --no-startup-id maim | xclip -selection clipboard -t image/png
 bindsym Shift+Print           exec --no-startup-id maim -s | xclip -selection clipboard -t image/png
-bindsym Control+Print         exec --no-startup-id maim ~/Pictures/full-$(date +%s).png
-bindsym Control+Shift+Print   exec --no-startup-id maim -s ~/Pictures/select-$(date +%s).png
+bindsym Control+Print         exec --no-startup-id maim $HOME/Pictures/full-$(date +%s).png
+bindsym Control+Shift+Print   exec --no-startup-id maim -s $HOME/Pictures/select-$(date +%s).png
 bindsym Mod1+Sys_Req          exec --no-startup-id maim -i $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
 
 bindsym $mod+F3               gaps inner current minus 10; gaps outer current minus 5
@@ -259,5 +226,5 @@ bindsym $mod+F8               mode "screen"
 bindsym XF86MonBrightnessUp   exec --no-startup-id xbacklight -inc 20
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 20
 bindsym XF86AudioMute         exec --no-startup-id pactl set-sink-mute 0 toggle
-bindsym XF86AudioRaiseVolume  exec --no-startup-id pactl set-sink-volume 0 +10%
-bindsym XF86AudioLowerVolume  exec --no-startup-id pactl set-sink-volume 0 -10%
+bindsym XF86AudioRaiseVolume  exec --no-startup-id pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume  exec --no-startup-id pactl set-sink-volume 0 -5%
