Escape backslash character

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set -s escape-time 0
 
 # window split
-bind \ split-window -h
+bind \\ split-window -h
 bind - split-window -v
 
 # panes navigation
