--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,11 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# copy from buffer to clipboard
+set-option -s set-clipboard off
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -sel c -i"
+
 # disable keys
 unbind '"'
 unbind %
@@ -49,7 +54,7 @@ set -g status-left "  "
 set -g status-right-length 60
 set -g status-right ""
 
-# darkred for active and darkgray for inactive
+# darkpurple for active and darkgray for inactive
 set-window-option -g window-status-current-style fg=colour4
 set-window-option -g window-status-style fg=colour239
 
