--- a/.config/i3/config
+++ b/.config/i3/config
@@ -174,6 +174,8 @@ bindsym $mod+u                border none
 bindsym $mod+m                exec $term -e gotop
 bindsym $mod+Shift+m          exec --no-startup-id $browser
 
+bindsym $mod+i                exec $term -e "nnn -e"
+
 bindsym $mod+Shift+a          exec --no-startup-id $term -e "alsamixer -c 1"
 
 bindsym $mod+backslash        split h
