--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,11 +17,6 @@ bindsym $mod+Return exec --no-startup-id $term
 # kill focused window
 bindsym $mod+q kill
 
-# start rofi (a program launcher)
-bindsym $mod+d        exec --no-startup-id rofi -show run
-bindsym $mod+Shift+d  exec --no-startup-id rofimoji -c
-bindsym $mod+c        exec --no-startup-id rofi -show calc -modi calc -no-show-match -no-sort
-
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -125,8 +120,6 @@ mode "screen" {
         bindsym $mod+F8 mode "default"
 }
 
-bindsym $mod+r mode "resize"
-
 # polybar
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
@@ -169,39 +162,47 @@ for_window [title="Save Image"]     fullscreen
 
 workspace 4 output HDMI1
 
-bindsym $mod+t                border normal 0
-bindsym $mod+y                border pixel 3
-bindsym $mod+u                border none
+bindsym $mod+t                      border normal 0
+bindsym $mod+y                      border pixel 3
+bindsym $mod+u                      border none
 
-bindsym $mod+m                exec $term -e gotop
-bindsym $mod+Shift+m          exec --no-startup-id $browser
+bindsym $mod+m                      exec $term -e htop
+bindsym $mod+i                      exec $term -e "nnn -e"
 
-bindsym $mod+i                exec $term -e "nnn -e"
+bindsym $mod+Shift+m                exec --no-startup-id $browser
+bindsym $mod+Shift+a                exec --no-startup-id $term -e "alsamixer -c 1"
 
-bindsym $mod+Shift+a          exec --no-startup-id $term -e "alsamixer -c 1"
+bindsym $mod+d                      exec --no-startup-id rofi -show run
+bindsym $mod+p                      exec --no-startup-id rofimoji -p
+bindsym $mod+Shift+d                exec --no-startup-id rofimoji -c
+bindsym $mod+c                      exec --no-startup-id rofi -show calc -modi calc -no-show-match -no-sort
 
-bindsym $mod+backslash        split h
-bindsym $mod+minus            split v
-bindsym $mod+apostrophe       split toggle
+bindsym $mod+backslash              split h
+bindsym $mod+minus                  split v
+bindsym $mod+apostrophe             split toggle
 
-bindsym $mod+comma            gaps inner current set 0; gaps outer current set 0
-bindsym $mod+period           gaps inner current set 10; gaps outer current set 5
+bindsym $mod+comma                  gaps inner current set 0; gaps outer current set 0
+bindsym $mod+period                 gaps inner current set 10; gaps outer current set 5
 
-bindsym $mod+Tab              workspace back_and_forth
+bindsym $mod+Tab                    workspace back_and_forth
 
-bindsym Print                 exec --no-startup-id maim | xclip -selection clipboard -t image/png
-bindsym Shift+Print           exec --no-startup-id maim -s | xclip -selection clipboard -t image/png
-bindsym Control+Print         exec --no-startup-id maim $HOME/Pictures/full-$(date +%s).png
-bindsym Control+Shift+Print   exec --no-startup-id maim -s $HOME/Pictures/select-$(date +%s).png
-bindsym Mod1+Sys_Req          exec --no-startup-id maim -i $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
+bindsym $mod+Delete                 exec --no-startup-id i3lock -c "$black" -n
 
-bindsym $mod+F3               gaps inner current minus 10; gaps outer current minus 5
-bindsym $mod+F4               gaps inner current plus 10; gaps outer current plus 5
-bindsym $mod+F7               exec --no-startup-id i3lock -c "$black" -n
-bindsym $mod+F8               mode "screen"
+bindsym Print                       exec --no-startup-id maim | xclip -selection clipboard -t image/png
+bindsym Shift+Print                 exec --no-startup-id maim -s | xclip -selection clipboard -t image/png
+bindsym Control+Print               exec --no-startup-id maim ~/Pictures/full-$(date +%s).png
+bindsym Control+Shift+Print         exec --no-startup-id maim -s ~/Pictures/select-$(date +%s).png
+bindsym Mod1+Sys_Req                exec --no-startup-id maim -i $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
 
-bindsym XF86MonBrightnessUp   exec --no-startup-id xbacklight -inc 20
-bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 20
-bindsym XF86AudioMute         exec --no-startup-id pactl set-sink-mute 0 toggle
-bindsym XF86AudioRaiseVolume  exec --no-startup-id pactl set-sink-volume 0 +5%
-bindsym XF86AudioLowerVolume  exec --no-startup-id pactl set-sink-volume 0 -5%
+bindsym $mod+F3                     gaps inner current minus 10; gaps outer current minus 5
+bindsym $mod+F4                     gaps inner current plus 10; gaps outer current plus 5
+
+bindsym $mod+r                      mode "resize"
+bindsym $mod+F8                     mode "screen"
+
+bindsym XF86MonBrightnessUp         exec --no-startup-id xbacklight -inc 20
+bindsym XF86MonBrightnessDown       exec --no-startup-id xbacklight -dec 20
+
+bindsym XF86AudioMute               exec --no-startup-id pactl set-sink-mute 0 toggle
+bindsym XF86AudioRaiseVolume        exec --no-startup-id pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume        exec --no-startup-id pactl set-sink-volume 0 -5%
