Add script to handle power action
This script will replace 'sdn' alias or any other power action command. So we
don't have to type anything through the terminal

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -198,6 +198,8 @@ bindsym $mod+F4                     gaps inner current plus 10; gaps outer curre
 bindsym $mod+r                      mode "resize"
 bindsym $mod+F8                     mode "screen"
 
+bindsym $mod+Shift+p                exec --no-startup-id $HOME/.local/bin/i3power
+
 bindsym XF86MonBrightnessUp         exec --no-startup-id xbacklight -inc 20
 bindsym XF86MonBrightnessDown       exec --no-startup-id xbacklight -dec 20
 
