Add script to replace i3-nagbar exit prompt

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -87,8 +87,6 @@ bindsym $mod+Shift+0 move container to workspace $ws10
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -198,6 +196,7 @@ bindsym $mod+F4                     gaps inner current plus 10; gaps outer curre
 bindsym $mod+r                      mode "resize"
 bindsym $mod+F8                     mode "screen"
 
+bindsym $mod+Shift+e                exec --no-startup-id $HOME/.local/bin/i3exit
 bindsym $mod+Shift+p                exec --no-startup-id $HOME/.local/bin/i3power
 
 bindsym XF86MonBrightnessUp         exec --no-startup-id xbacklight -inc 20
