--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,6 +64,8 @@ set -g message-style fg=colour4
 # active border
 set -g pane-active-border-style fg=colour4
 
+# enable mouse mode
+set -g mouse on
 
 # tpm
 set -g @plugin 'tmux-plugins/tpm'
