--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,9 +32,6 @@ set -g renumber-windows on
 # set update frequency (default 15 seconds)
 set -g status-interval 5
 
-# center status line
-set -g status-justify centre
-
 # pane border
 set -g pane-border-style fg=black
 set -g pane-active-border-style fg=black
@@ -45,15 +42,17 @@ set -g status-fg colour4
 
 # status line left side
 set -g status-left-length 40
-set -g status-left "  "
+set -g status-left "#[fg=green,bold,reverse] #S #[default] "
 
 # status line right side
 set -g status-right-length 60
-set -g status-right ""
+set -g status-right "#[fg=green,bold,reverse] #{host} "
 
-# darkpurple for active and darkgray for inactive
-set-window-option -g window-status-current-style fg=colour4
+# status line unfocused and focused window
 set-window-option -g window-status-style fg=colour239
+set-window-option -g window-status-format '#[fg=green,bold]#I#[default]:#W'
+set-window-option -g window-status-current-style fg=blue,bold
+set-window-option -g window-status-current-format '#I:#W'
 
 # message color
 set -g message-style fg=colour4
