--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,8 +37,8 @@ set -g pane-border-style fg=black
 set -g pane-active-border-style fg=black
 
 # status line
-set -g status-bg default
-set -g status-fg colour4
+set -g status-style bg=default
+set -g status-style fg=colour4
 
 # status line left side
 set -g status-left-length 40
